# GLTFAnimationSample

./: Animation.cpp  Animation.hpp  CMakeLists.txt  CmakeClang.sh  FoxRE.glb  GL3D.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  T3dvere.glb  Texture.cpp  Texture.hpp  Untitled.glb  fragAnim.glsl  fragBase.glsl  t3d1.glb  vertAnim.glsl  vertBase.glsl
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
depend/stbi/: stb_image.h
